@@ -2451,10 +2451,20 @@ Sometimes a single line isn't enough to do what you want, so SpaceFM provides a 
 
 <p>At its simplest, a command script is simply a list of commands that could be entered in a terminal.  The script executes each command in sequence, allowing you to automate common command-line tasks.  You can also use tests and loops in scripts to make them more capable.  For more information on writing scripts, see the <a href="http://www.tldp.org/LDP/abs/html/index.html">Bash Scripting Guide</a>.
 
+<p>Command scripts can also evolve into small, full-featured applications using <a href="#dialog">SpaceFM Dialog</a> to show custom dialogs from within the script.
+
 <p>The substitution variables used above in command lines may NOT be used in a command script.  Instead, bash variables are preloaded for your use.
 
-<p><a name="exvar"><b>Scroll to the end of the command script</b></a> to see a reference of bash variables available for use:
+<p><a name="exvar">When you select Command|Script</a>, a default bash script is generated as shown below:
 <pre>
+#!/bin/bash
+$fm_import    # import file manager variables (scroll down for info)
+#
+# Enter your commands here:     ( then save this file )
+
+
+
+exit $?
 # Example variables available for use: (imported by $fm_import)
 # These variables represent the state of the file manager when command is run.
 # These variables can also be used in command lines and in the Path Bar.
@@ -2568,10 +2578,13 @@ Sometimes a single line isn't enough to do what you want, so SpaceFM provides a 
 #   fi
 </pre>
 
+<b>Or, if you would like to use another script as your default</b>, save it as <a href="#programfiles-home-defscript">~/.config/spacefm/scripts/default-script</a>.  It is recommended that you include the example variables shown above at the end of your default script.
+
 <p>For example, to calculate the MD5 sum of all selected filenames using a command script, you would use this line in the script:
 <pre>    md5sum "${fm_filenames[@]}"</pre>
 
-<p>If your script requires additional files to work, they should be placed in the <a href="#designmode-command-browse-files">command directory</a>.  You can refer to this directory in your script as "$fm_cmd_dir".  Files in this directory should not be modified by the script.
+<p><b>Script Directories</b>
+<br>If your script requires additional files to work, they should be placed in the <a href="#designmode-command-browse-files">command directory</a>.  You can refer to this directory in your script as "$fm_cmd_dir".  Files in this directory should not be modified by the script.
 
 <p>If your script needs to save changing, persistent data to the user's home folder (to keep track of user preferences, for example), the <a href="#designmode-command-browse-data">data directory</a> should be used ("$fm_cmd_data").  Because this directory may not already exist, always run this command before using it:
 <pre>    mkdir -p "$fm_cmd_dir"</pre>
@@ -2683,7 +2696,7 @@ If Popup Error is checked and the exit status of your command is not zero, the o
 
 <!-- # Popup Output #popout -->
 <p><a name="designmode-command-popout"/><a href="#designmode-command-popout"><b>Popup Output</b></a><br>
-If Popup Output is checked, the output monitor will be shown the instant output is detected (even if the task runs so quickly that it is not shown in the tasks list).  If you close the monitor, it will be raised again any time additional output occurs.
+If Popup Output is checked, the output monitor will be shown the first time the command produces output (even if the task runs so quickly that it is not shown in the tasks list).
 
 <p>Popup Output can be used to alert you when your task has produced output.  By default, it is checked in new commands.
 
@@ -4905,6 +4918,10 @@ Contains the <a href="#designmode-command-browse-data">data directories</a> for 
 Contains the <a href="#designmode-command-browse-files">command directories</a> for custom commands you have added to SpaceFM's menus or toolbars, if any.
 
 <p>Because SpaceFM is highly configurable, you may have much time and effort invested in your SpaceFM config folder, so it's a good idea to <b>keep an up-to-date backup!</b>
+
+<!-- # scripts/default-script #defscript -->
+<p><a name="programfiles-home-defscript"/><a href="#programfiles-home-defscript"><b>scripts/default-script</b></a><br>
+This file, <i>if you create it</i>, is used as your default <a href="#designmode-command-script">command script</a> rather than the <a href="#exvar">automatically generated one</a>.  When you create a new custom command and set its type to Command|Script, ~/.config/spacefm/scripts/default-script will be copied to the <a href="#designmode-command-browse-files">command directory</a> as exec.sh.
 
 <!-- # ~/.local/share/applications/ #localapps -->
 <p><a name="programfiles-home-localapps"/><a href="#programfiles-home-localapps"><b>~/.local/share/applications/</b></a><br>
