@@ -5,6 +5,7 @@
     default keys for Go|Tab|Tab N = Alt+1 thru Alt+0
     license bumped to GPL3+
     Task Show Output raises only once
+    custom default command script
 0.7.11  2012-08-15:
     added --no-saved-tabs, -n command line option to not load saved tabs #110
     --reuse-tab can be used in conjunction with other options
